# rag-py-inngest-qdrant

./: .env  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/2f87e65f-f109-43dc-a9b2-4476482690d9/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/3d695fd9-1d75-4d67-8c26-83f8f6ea512f/: mutable_id_tracker.mappings
